// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1 makeStyles-root-5"
  >
    <header
      class="makeStyles-header-2"
    >
      <div
        class="makeStyles-toolbar-3"
      >
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-7 makeStyles-emoji-8"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-7 makeStyles-emoji-9"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-4"
    >
      <code
        class="makeStyles-time-10 makeStyles-time-12"
      >
        <span
          class="makeStyles-hours-11"
        >
          01
        </span>
        :00
      </code>
      <button
        class="makeStyles-button-6"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-7 makeStyles-emoji-13"
          role="img"
        >
          work
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly 2`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1 makeStyles-root-5"
  >
    <header
      class="makeStyles-header-2"
    >
      <div
        class="makeStyles-toolbar-3"
      >
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-7 makeStyles-emoji-8"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-7 makeStyles-emoji-9"
            role="img"
          >
            🔕
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-4"
    >
      <code
        class="makeStyles-time-10 makeStyles-time-12"
      >
        <span
          class="makeStyles-hours-11"
        >
          01
        </span>
        :00
      </code>
      <button
        class="makeStyles-button-6"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-7 makeStyles-emoji-13"
          role="img"
        >
          work
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly 3`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1 makeStyles-root-5"
  >
    <header
      class="makeStyles-header-2"
    >
      <div
        class="makeStyles-toolbar-3"
      >
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-7 makeStyles-emoji-8"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-7 makeStyles-emoji-9"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-4"
    >
      <code
        class="makeStyles-time-10 makeStyles-time-12"
      >
        <span
          class="makeStyles-hours-11"
        >
          01
        </span>
        :00
      </code>
      <button
        class="makeStyles-button-6"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-7 makeStyles-emoji-13"
          role="img"
        >
          work
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly after emoji has been changed 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-14 makeStyles-root-18"
  >
    <header
      class="makeStyles-header-15"
    >
      <div
        class="makeStyles-toolbar-16"
      >
        <button
          class="makeStyles-button-19"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-20 makeStyles-emoji-21"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-19"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-20 makeStyles-emoji-22"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-17"
    >
      <code
        class="makeStyles-time-23 makeStyles-time-25"
      >
        <span
          class="makeStyles-hours-24"
        >
          01
        </span>
        :00
      </code>
      <button
        class="makeStyles-button-19"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-20 makeStyles-emoji-26"
          role="img"
        >
          work
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly after emoji has been changed 2`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-14 makeStyles-root-18"
  >
    <header
      class="makeStyles-header-15"
    >
      <div
        class="makeStyles-toolbar-16"
      >
        <button
          class="makeStyles-button-19"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-20 makeStyles-emoji-21"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-19"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-20 makeStyles-emoji-22"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-17"
    >
      <code
        class="makeStyles-time-23 makeStyles-time-25"
      >
        <span
          class="makeStyles-hours-24"
        >
          01
        </span>
        :00
      </code>
      <button
        class="makeStyles-button-19"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-20 makeStyles-emoji-26"
          role="img"
        >
          👩‍💻
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly after session type has been changed 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-27 makeStyles-root-31"
  >
    <header
      class="makeStyles-header-28"
    >
      <div
        class="makeStyles-toolbar-29"
      >
        <button
          class="makeStyles-button-32"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-33 makeStyles-emoji-34"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-32"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-33 makeStyles-emoji-35"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-30"
    >
      <code
        class="makeStyles-time-36 makeStyles-time-38"
      >
        <span
          class="makeStyles-hours-37"
        >
          01
        </span>
        :00
      </code>
      <button
        class="makeStyles-button-32"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-33 makeStyles-emoji-39"
          role="img"
        >
          work
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly after session type has been changed 2`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-27 makeStyles-root-31"
  >
    <header
      class="makeStyles-header-28"
    >
      <div
        class="makeStyles-toolbar-29"
      >
        <button
          class="makeStyles-button-32"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-33 makeStyles-emoji-34"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-32"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-33 makeStyles-emoji-35"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-30"
    >
      <code
        class="makeStyles-time-36 makeStyles-time-38"
      >
        <span
          class="makeStyles-hours-37"
        >
          01
        </span>
        :00
      </code>
      <button
        class="makeStyles-button-32"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-33 makeStyles-emoji-39"
          role="img"
        >
          break
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;
